--- a/00-J1-CS1B-ASI-September-2021/Question_5.html
+++ b/00-J1-CS1B-ASI-September-2021/Question_5.html
@@ -1,13 +1,25 @@
+<!DOCTYPE html>
+<html lang="" xml:lang="">
+  <head>
+    <title>Statistics with R</title>
+    <meta charset="utf-8" />
+    <script src="libs/header-attrs-2.25/header-attrs.js"></script>
+    <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
+    <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
+  </head>
+  <body>
+    <textarea id="source">
+class: center, middle, inverse, title-slide
+
+.title[
+# Statistics with R
+]
+.subtitle[
+## Introduction to R for Actuarial Students
+]
+
 ---
-title: "Statistics with R"
-subtitle: "Introduction to R for Actuarial Students"
-output:
-  xaringan::moon_reader:
-    lib_dir: libs
-    nature:
-      highlightStyle: github
-      countIncrementalSlides: false
----
+
 
 * Introduction to R for Actuarial Students
 
@@ -22,18 +34,15 @@ output:
 ---
 
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-library(magrittr)
-```
 
-```{css, echo=FALSE}
+
+&lt;style type="text/css"&gt;
 pre {
   background: #ADD8E6;
   max-width: 100%;
   overflow-x: scroll;
 }
-```
+&lt;/style&gt;
 
 Q. 5)
 (Students can copy the R code as provided file ‘Reference_RCode’)
@@ -146,15 +155,20 @@ Insurer  D * 70 * 75 * 77 * 80 *
 ---
 Solution 5:
 
-```{r}
+
+```r
 data=matrix(c(112,38,89,70,130,50,127,75,178,80,210,77,150,68,150,80),4,4)
  
-n <- ncol(data)
-m <- mean(rowMeans(data))
-s <- mean(apply(data,1,var))
-v <- var(rowMeans(data))-mean(apply(data,1,var))/n
-Z <- n/(n+s/v)
+n &lt;- ncol(data)
+m &lt;- mean(rowMeans(data))
+s &lt;- mean(apply(data,1,var))
+v &lt;- var(rowMeans(data))-mean(apply(data,1,var))/n
+Z &lt;- n/(n+s/v)
 Z*rowMeans(data)+(1-Z)*m
+```
+
+```
+## [1] 138.08805  64.47793 139.41039  79.02364
 ```
 
 # [1] 138.08805 64.47793 139.41039 79.02364
@@ -170,31 +184,72 @@ Expected total claim payment from
 As required for other parts
 ---
 
-```{r}
+
+```r
 n
+```
+
+```
+## [1] 4
+```
+
+```r
 # [1] 4
 m
+```
+
+```
+## [1] 105.25
+```
+
+```r
 # [1] 105.25
 s
+```
+
+```
+## [1] 933.8333
+```
+
+```r
 # [1] 933.8333
 v
+```
+
+```
+## [1] 1737.625
+```
+
+```r
 # [1] 1737.625
 Z
+```
+
+```
+## [1] 0.8815584
+```
+
+```r
 # [1] 0.8815584 
 ```
 ---
 ### Part (B)
 
 ii) a) R Code
-```{r}
+
+```r
 data=matrix(c(112,38,89,70,73,130,50,127,75,87,178,80,210,77,113,150,68,150,80,112),5,4)
 #no change in other code from part i
-n <- ncol(data)
-m <- mean(rowMeans(data))
-s <- mean(apply(data,1,var))
-v <- var(rowMeans(data))-mean(apply(data,1,var))/n
-Z <- n/(n+s/v)
+n &lt;- ncol(data)
+m &lt;- mean(rowMeans(data))
+s &lt;- mean(apply(data,1,var))
+v &lt;- var(rowMeans(data))-mean(apply(data,1,var))/n
+Z &lt;- n/(n+s/v)
 Z*rowMeans(data)+(1-Z)*m
+```
+
+```
+## [1] 137.11712  65.12725 138.41035  79.35279  97.24249
 ```
 
 ---
@@ -213,16 +268,52 @@ Expected total claim payment from
 *  insurer E is USD 97.24 Million (newly added insurer)
 
 required for other parts
-```{r}
+
+```r
 n
+```
+
+```
+## [1] 4
+```
+
+```r
 # [1] 4
 m
+```
+
+```
+## [1] 103.45
+```
+
+```r
 # [1] 103.45
 s
+```
+
+```
+## [1] 824.05
+```
+
+```r
 # [1] 824.05
 v
+```
+
+```
+## [1] 1288.5
+```
+
+```r
 # [1] 1288.5
 Z
+```
+
+```
+## [1] 0.862154
+```
+
+```r
 # [1] 0.862154
 ```
 
@@ -278,26 +369,27 @@ insurers towards 103.45.
 iii) a) Use data as used in part ii
 
 
-```{r}
+
+```r
 data=matrix(c(112,38,89,70,73,130,50,127,75,87,178,80,210,77,113,150,68,150,80,112),5,4)
 #all other code lines as provide in part iii reference R code
-volume <- 
+volume &lt;- 
 matrix(c(165,51,119,108,103,186,63,159,112,116,198,78,219,122,126,200,83,188,133,151),5,4)
-n <- ncol(data)
-N <- nrow(data)
-X <- data/volume #claim payment per unit of volume measure
-Xibar <- rowSums(data)/rowSums(volume)
-Pi <- rowSums(volume) #volume measure for each insurer
-P <- sum(Pi)
-Pstar <- sum(Pi*(1-Pi/P))/(N*n-1)
-m <- sum(data)/P #average claim payment per unit volume measure across all insurers
-s <- mean(rowSums(volume*(X-Xibar)^2)/(n-1))
-v <- (sum(rowSums(volume*(X-m)^2))/(n*N-1)-s)/Pstar
-zi <- Pi/(Pi+s/v) #credibility factor for each insurer
-credibilityi <- zi*Xibar+(1-zi)*m #expected claim payment per unit of volume measure
-volume5i <- matrix(c(210,91,192,144,181),5,1) #’volume5i’ is Year 5 volume measure 
+n &lt;- ncol(data)
+N &lt;- nrow(data)
+X &lt;- data/volume #claim payment per unit of volume measure
+Xibar &lt;- rowSums(data)/rowSums(volume)
+Pi &lt;- rowSums(volume) #volume measure for each insurer
+P &lt;- sum(Pi)
+Pstar &lt;- sum(Pi*(1-Pi/P))/(N*n-1)
+m &lt;- sum(data)/P #average claim payment per unit volume measure across all insurers
+s &lt;- mean(rowSums(volume*(X-Xibar)^2)/(n-1))
+v &lt;- (sum(rowSums(volume*(X-m)^2))/(n*N-1)-s)/Pstar
+zi &lt;- Pi/(Pi+s/v) #credibility factor for each insurer
+credibilityi &lt;- zi*Xibar+(1-zi)*m #expected claim payment per unit of volume measure
+volume5i &lt;- matrix(c(210,91,192,144,181),5,1) #’volume5i’ is Year 5 volume measure 
 #okay to have 1,5 instead of 5,1 in volume5i (row , column interchange)
-claims5i <- credibilityi*volume5i #claims5i is the expected claim payment in year 5 
+claims5i &lt;- credibilityi*volume5i #claims5i is the expected claim payment in year 5 
 ```
 Additional output (marks not to be deducted in case if other parts are not provided by student)
 n
@@ -367,3 +459,121 @@ Year 5 volume which is higher for all insurers.
 ---
 
 
+    </textarea>
+<style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
+<script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
+<script>var slideshow = remark.create({
+"highlightStyle": "github",
+"countIncrementalSlides": false
+});
+if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
+  window.dispatchEvent(new Event('resize'));
+});
+(function(d) {
+  var s = d.createElement("style"), r = d.querySelector(".remark-slide-scaler");
+  if (!r) return;
+  s.type = "text/css"; s.innerHTML = "@page {size: " + r.style.width + " " + r.style.height +"; }";
+  d.head.appendChild(s);
+})(document);
+
+(function(d) {
+  var el = d.getElementsByClassName("remark-slides-area");
+  if (!el) return;
+  var slide, slides = slideshow.getSlides(), els = el[0].children;
+  for (var i = 1; i < slides.length; i++) {
+    slide = slides[i];
+    if (slide.properties.continued === "true" || slide.properties.count === "false") {
+      els[i - 1].className += ' has-continuation';
+    }
+  }
+  var s = d.createElement("style");
+  s.type = "text/css"; s.innerHTML = "@media print { .has-continuation { display: none; } }";
+  d.head.appendChild(s);
+})(document);
+// delete the temporary CSS (for displaying all slides initially) when the user
+// starts to view slides
+(function() {
+  var deleted = false;
+  slideshow.on('beforeShowSlide', function(slide) {
+    if (deleted) return;
+    var sheets = document.styleSheets, node;
+    for (var i = 0; i < sheets.length; i++) {
+      node = sheets[i].ownerNode;
+      if (node.dataset["target"] !== "print-only") continue;
+      node.parentNode.removeChild(node);
+    }
+    deleted = true;
+  });
+})();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
+(function() {
+  "use strict"
+  // Replace <script> tags in slides area to make them executable
+  var scripts = document.querySelectorAll(
+    '.remark-slides-area .remark-slide-container script'
+  );
+  if (!scripts.length) return;
+  for (var i = 0; i < scripts.length; i++) {
+    var s = document.createElement('script');
+    var code = document.createTextNode(scripts[i].textContent);
+    s.appendChild(code);
+    var scriptAttrs = scripts[i].attributes;
+    for (var j = 0; j < scriptAttrs.length; j++) {
+      s.setAttribute(scriptAttrs[j].name, scriptAttrs[j].value);
+    }
+    scripts[i].parentElement.replaceChild(s, scripts[i]);
+  }
+})();
+(function() {
+  var links = document.getElementsByTagName('a');
+  for (var i = 0; i < links.length; i++) {
+    if (/^(https?:)?\/\//.test(links[i].getAttribute('href'))) {
+      links[i].target = '_blank';
+    }
+  }
+})();</script>
+
+<script>
+slideshow._releaseMath = function(el) {
+  var i, text, code, codes = el.getElementsByTagName('code');
+  for (i = 0; i < codes.length;) {
+    code = codes[i];
+    if (code.parentNode.tagName !== 'PRE' && code.childElementCount === 0) {
+      text = code.textContent;
+      if (/^\\\((.|\s)+\\\)$/.test(text) || /^\\\[(.|\s)+\\\]$/.test(text) ||
+          /^\$\$(.|\s)+\$\$$/.test(text) ||
+          /^\\begin\{([^}]+)\}(.|\s)+\\end\{[^}]+\}$/.test(text)) {
+        code.outerHTML = code.innerHTML;  // remove <code></code>
+        continue;
+      }
+    }
+    i++;
+  }
+};
+slideshow._releaseMath(document);
+</script>
+<!-- dynamically load mathjax for compatibility with self-contained -->
+<script>
+(function () {
+  var script = document.createElement('script');
+  script.type = 'text/javascript';
+  script.src  = 'https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-MML-AM_CHTML';
+  if (location.protocol !== 'file:' && /^https?:/.test(script.src))
+    script.src  = script.src.replace(/^https?:/, '');
+  document.getElementsByTagName('head')[0].appendChild(script);
+})();
+</script>
+  </body>
+</html>
